src/file_interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMERO

Grammar

Rule 0     S' -> fichero
Rule 1     fichero -> PROPOSICIONES propositions REGLAS rules
Rule 2     propositions -> propositions proposition
Rule 3     propositions -> proposition
Rule 4     proposition -> text PUNTOYCOMA
Rule 5     text -> text IDENT
Rule 6     text -> IDENT
Rule 7     rules -> rules rule
Rule 8     rules -> rule
Rule 9     rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA
Rule 10    union -> andunion
Rule 11    union -> orunion
Rule 12    union -> PNUMERO
Rule 13    andunion -> andunion AND andunion
Rule 14    andunion -> PNUMERO
Rule 15    orunion -> orunion OR orunion
Rule 16    orunion -> PNUMERO

Terminals, with rules where they appear

AND                  : 13
CNUMERO              : 9
COEFICIENTE          : 9
DOSPUNTOS            : 9
IDENT                : 5 6
IF                   : 9
IGUAL                : 9
NUMERO               : 
OR                   : 15
PNUMERO              : 9 12 14 16
PROPOSICIONES        : 1
PUNTOYCOMA           : 4 9
REGLAS               : 1
THEN                 : 9
error                : 

Nonterminals, with rules where they appear

andunion             : 10 13 13
fichero              : 0
orunion              : 11 15 15
proposition          : 2 3
propositions         : 1 2
rule                 : 7 8
rules                : 1 7
text                 : 4 5
union                : 9

Parsing method: LALR

state 0

    (0) S' -> . fichero
    (1) fichero -> . PROPOSICIONES propositions REGLAS rules

    PROPOSICIONES   shift and go to state 2

    fichero                        shift and go to state 1

state 1

    (0) S' -> fichero .



state 2

    (1) fichero -> PROPOSICIONES . propositions REGLAS rules
    (2) propositions -> . propositions proposition
    (3) propositions -> . proposition
    (4) proposition -> . text PUNTOYCOMA
    (5) text -> . text IDENT
    (6) text -> . IDENT

    IDENT           shift and go to state 6

    propositions                   shift and go to state 3
    proposition                    shift and go to state 4
    text                           shift and go to state 5

state 3

    (1) fichero -> PROPOSICIONES propositions . REGLAS rules
    (2) propositions -> propositions . proposition
    (4) proposition -> . text PUNTOYCOMA
    (5) text -> . text IDENT
    (6) text -> . IDENT

    REGLAS          shift and go to state 7
    IDENT           shift and go to state 6

    proposition                    shift and go to state 8
    text                           shift and go to state 5

state 4

    (3) propositions -> proposition .

    REGLAS          reduce using rule 3 (propositions -> proposition .)
    IDENT           reduce using rule 3 (propositions -> proposition .)


state 5

    (4) proposition -> text . PUNTOYCOMA
    (5) text -> text . IDENT

    PUNTOYCOMA      shift and go to state 9
    IDENT           shift and go to state 10


state 6

    (6) text -> IDENT .

    PUNTOYCOMA      reduce using rule 6 (text -> IDENT .)
    IDENT           reduce using rule 6 (text -> IDENT .)


state 7

    (1) fichero -> PROPOSICIONES propositions REGLAS . rules
    (7) rules -> . rules rule
    (8) rules -> . rule
    (9) rule -> . IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    IF              shift and go to state 13

    rules                          shift and go to state 11
    rule                           shift and go to state 12

state 8

    (2) propositions -> propositions proposition .

    REGLAS          reduce using rule 2 (propositions -> propositions proposition .)
    IDENT           reduce using rule 2 (propositions -> propositions proposition .)


state 9

    (4) proposition -> text PUNTOYCOMA .

    REGLAS          reduce using rule 4 (proposition -> text PUNTOYCOMA .)
    IDENT           reduce using rule 4 (proposition -> text PUNTOYCOMA .)


state 10

    (5) text -> text IDENT .

    PUNTOYCOMA      reduce using rule 5 (text -> text IDENT .)
    IDENT           reduce using rule 5 (text -> text IDENT .)


state 11

    (1) fichero -> PROPOSICIONES propositions REGLAS rules .
    (7) rules -> rules . rule
    (9) rule -> . IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    $end            reduce using rule 1 (fichero -> PROPOSICIONES propositions REGLAS rules .)
    IF              shift and go to state 13

    rule                           shift and go to state 14

state 12

    (8) rules -> rule .

    IF              reduce using rule 8 (rules -> rule .)
    $end            reduce using rule 8 (rules -> rule .)


state 13

    (9) rule -> IF . union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA
    (10) union -> . andunion
    (11) union -> . orunion
    (12) union -> . PNUMERO
    (13) andunion -> . andunion AND andunion
    (14) andunion -> . PNUMERO
    (15) orunion -> . orunion OR orunion
    (16) orunion -> . PNUMERO

    PNUMERO         shift and go to state 16

    union                          shift and go to state 15
    andunion                       shift and go to state 17
    orunion                        shift and go to state 18

state 14

    (7) rules -> rules rule .

    IF              reduce using rule 7 (rules -> rules rule .)
    $end            reduce using rule 7 (rules -> rules rule .)


state 15

    (9) rule -> IF union . THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    THEN            shift and go to state 19


state 16

    (12) union -> PNUMERO .
    (14) andunion -> PNUMERO .
    (16) orunion -> PNUMERO .

  ! reduce/reduce conflict for THEN resolved using rule 12 (union -> PNUMERO .)
  ! reduce/reduce conflict for THEN resolved using rule 12 (union -> PNUMERO .)
    THEN            reduce using rule 12 (union -> PNUMERO .)
    AND             reduce using rule 14 (andunion -> PNUMERO .)
    OR              reduce using rule 16 (orunion -> PNUMERO .)

  ! THEN            [ reduce using rule 14 (andunion -> PNUMERO .) ]
  ! THEN            [ reduce using rule 16 (orunion -> PNUMERO .) ]


state 17

    (10) union -> andunion .
    (13) andunion -> andunion . AND andunion

    THEN            reduce using rule 10 (union -> andunion .)
    AND             shift and go to state 20


state 18

    (11) union -> orunion .
    (15) orunion -> orunion . OR orunion

    THEN            reduce using rule 11 (union -> orunion .)
    OR              shift and go to state 21


state 19

    (9) rule -> IF union THEN . PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    PNUMERO         shift and go to state 22


state 20

    (13) andunion -> andunion AND . andunion
    (13) andunion -> . andunion AND andunion
    (14) andunion -> . PNUMERO

    PNUMERO         shift and go to state 24

    andunion                       shift and go to state 23

state 21

    (15) orunion -> orunion OR . orunion
    (15) orunion -> . orunion OR orunion
    (16) orunion -> . PNUMERO

    PNUMERO         shift and go to state 26

    orunion                        shift and go to state 25

state 22

    (9) rule -> IF union THEN PNUMERO . DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    DOSPUNTOS       shift and go to state 27


state 23

    (13) andunion -> andunion AND andunion .
    (13) andunion -> andunion . AND andunion

  ! shift/reduce conflict for AND resolved as shift
    THEN            reduce using rule 13 (andunion -> andunion AND andunion .)
    AND             shift and go to state 20

  ! AND             [ reduce using rule 13 (andunion -> andunion AND andunion .) ]


state 24

    (14) andunion -> PNUMERO .

    AND             reduce using rule 14 (andunion -> PNUMERO .)
    THEN            reduce using rule 14 (andunion -> PNUMERO .)


state 25

    (15) orunion -> orunion OR orunion .
    (15) orunion -> orunion . OR orunion

  ! shift/reduce conflict for OR resolved as shift
    THEN            reduce using rule 15 (orunion -> orunion OR orunion .)
    OR              shift and go to state 21

  ! OR              [ reduce using rule 15 (orunion -> orunion OR orunion .) ]


state 26

    (16) orunion -> PNUMERO .

    OR              reduce using rule 16 (orunion -> PNUMERO .)
    THEN            reduce using rule 16 (orunion -> PNUMERO .)


state 27

    (9) rule -> IF union THEN PNUMERO DOSPUNTOS . CNUMERO IGUAL COEFICIENTE PUNTOYCOMA

    CNUMERO         shift and go to state 28


state 28

    (9) rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO . IGUAL COEFICIENTE PUNTOYCOMA

    IGUAL           shift and go to state 29


state 29

    (9) rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL . COEFICIENTE PUNTOYCOMA

    COEFICIENTE     shift and go to state 30


state 30

    (9) rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 31


state 31

    (9) rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA .

    IF              reduce using rule 9 (rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA .)
    $end            reduce using rule 9 (rule -> IF union THEN PNUMERO DOSPUNTOS CNUMERO IGUAL COEFICIENTE PUNTOYCOMA .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for AND in state 23 resolved as shift
WARNING: shift/reduce conflict for OR in state 25 resolved as shift
WARNING: reduce/reduce conflict in state 16 resolved using rule (union -> PNUMERO)
WARNING: rejected rule (andunion -> PNUMERO) in state 16
WARNING: reduce/reduce conflict in state 16 resolved using rule (union -> PNUMERO)
WARNING: rejected rule (orunion -> PNUMERO) in state 16
